[gd_scene load_steps=15 format=3 uid="uid://dy6n7oerol8fy"]

[ext_resource type="PackedScene" uid="uid://0k782x71i47e" path="res://Scenes/entity.tscn" id="1_tr07b"]
[ext_resource type="Texture2D" uid="uid://0tepisnp5it1" path="res://Sprites/Zombie.png" id="2_7rdik"]
[ext_resource type="Script" path="res://Scripts/zombie.gd" id="2_equo7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfkov"]
size = Vector2(6, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7mr1"]
atlas = ExtResource("2_7rdik")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aah2m"]
atlas = ExtResource("2_7rdik")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kho0k"]
atlas = ExtResource("2_7rdik")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ekry"]
atlas = ExtResource("2_7rdik")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqnp2"]
atlas = ExtResource("2_7rdik")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hxs7"]
atlas = ExtResource("2_7rdik")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ip2fr"]
atlas = ExtResource("2_7rdik")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46rpa"]
atlas = ExtResource("2_7rdik")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_coxbj"]
atlas = ExtResource("2_7rdik")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ve6ws"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7mr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aah2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kho0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ekry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqnp2")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hxs7")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ip2fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46rpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coxbj")
}],
"loop": false,
"name": &"walk",
"speed": 5.0
}]

[node name="Zombie" instance=ExtResource("1_tr07b")]
script = ExtResource("2_equo7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_nfkov")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_ve6ws")
animation = &"walk"
autoplay = "stand"

[node name="MoveTimer" type="Timer" parent="Timers" index="0"]
autostart = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="Timers/MoveTimer" to="." method="_on_move_timer_timeout"]
